Move default templates to script folder, leave /template for user mounting

--- a/script/package.json
+++ b/script/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {},
   "scripts": {
     "build": "node render.js",
-    "dev": "DEBUG=docker-nunjucks node render.js --templates=$PWD/../templates"
+    "dev": "DEBUG=docker-nunjucks node render.js --templates=$PWD/templates"
   },
   "keywords": [
     "docker",
